# apexdl_scraper

./: pyproject.toml
apexdl_scraper/: scrapy.cfg
apexdl_scraper/apexdl_scraper/: items.py  middlewares.py  pipelines.py  settings.py
apexdl_scraper/apexdl_scraper/spiders/: apex_data.json  apexspider.py  data_apex.py
