[tool.poetry]
name = "apexdl"
version = "0.1.0"
description = "scraping project"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
scrapy = "^2.8.0"
splash = "^3.5"
ipython = "^8.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
